2006-06-29  Murray Cumming  <murrayc@murrayc.com>

	* libgda/gda-init.c: gda_main_run(): Documentation: 
	Remove mention of Bonobo because libgda does not use 
	it anymore.
	* providers/sybase/main.c: Do not include the bonobo 
	i18n header, because we do not depend on bonobo. I guess 
	nobody is building this backend.

2006-06-17  Gintautas Miliauskas  <gintas@akl.lt>

	* configure.in: Added "lt" to ALL_LINGUAS.

2006-05-24  Vivien Malerba <malerba@gnome-db.org>

	* libgda/gda-data-proxy.c: fixed a bug which could make the GdaDataProxy object show
	more data than there actually was in the displayed data model when the number of
	rows of that data model is only known when all the model has been displayed.
	* libgda/gda-data-model.c: improved gda_data_model_move_iter_at_row_default(),
	gda_data_model_move_iter_next_default() and gda_data_model_move_iter_prev_default()
	to include default value handling.
	* libgda/gda-data-proxy.c: removed the non necessary custom iter_at_row() virtual method
	* providers/mysql/mysql_specs_create_db.xml.in:
	* providers/postgres/postgres_specs_create_db.xml.in: added translations support
	* providers/postgres/postgres_specs_create_index.xml.in:
	* providers/postgres/postgres_specs_create_table.xml.in:
	* providers/postgres/postgres_specs_drop_index.xml.in:
	* providers/postgres/postgres_specs_drop_table.xml.in: new spec files for provider operations
	* libgda/gda-server-operation.[ch]: new object
	* libgda/libgda-paramlist.dtd:
	* libgda/libgda-server-operation.dtd: new DTD files for XML based specifications
	* doc/C/query0*.svg:
	* doc/C/query0*.png: new illustration files
	* doc/C/*: documentation update
	* testing/gda-inspect-dict-file.c: bug fixed
	* functions renaming for API coherence
	(gda_entity_field_get_data_type => gda_entity_field_get_dict_type,
	gda_dict_field_set_data_type => gda_dict_field_set_dict_type,
	gda_dict_get_data_type_by_name => gda_dict_get_dict_type_by_name,